--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.servlet.multipart.max-request-size=70MB
 
 #S3 bucket credentials
 BUCKET=filestorageser
-ACCESS_KEY=AKIA46YJYDW33RR7P6OB
-SECRET_KEY=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
+ACCESS_KEY=
+SECRET_KEY=
